<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bibbla</string>
    <string name="hello_world">Hello world!</string>

    <!-- Text on the buttons in the main menu -->
    <string name="search">Sök</string>
    <string name="reservations">Mina</string>
    <string name="loans">Mina lån</string>
    <string name="my_pages">Mina sidor</string>
    <string name="libraries">Bib</string>
    <string name="settings">Instäl</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reservations">ReservationsActivity</string>
    <string name="title_activity_loans">LoansActivity</string>
    <string name="title_activity_user">UserActivity</string>

</resources>
